--- a/server/views/pdf/tasks/createLicenceTask.pug
+++ b/server/views/pdf/tasks/createLicenceTask.pug
@@ -16,16 +16,20 @@ div.paddingBottom
                 if versionInfo.isNewTemplate
                     | ,
                     span.bold  #{versionInfo.templateLabel}
-            else
-                | All sections not completed
 
             if versionInfo.lastVersion
-                p Last printed version #{versionInfo.lastVersion.version},
-                    if versionInfo.isNewTemplate
-                        span.bold  #{versionInfo.lastTemplateLabel}
-                    else
-                        |  #{versionInfo.lastTemplateLabel}
-                    |, on #{versionInfo.lastVersion.timestamp}
+                p
+                span Last created:
+                ul.list-bullet
+                    li #{versionInfo.lastVersion.timestamp}
+
+                    li
+                        if versionInfo.isNewTemplate
+                            span.bold #{versionInfo.lastTemplateLabel}
+                        else
+                            | #{versionInfo.lastTemplateLabel}
+                    li Version #{versionInfo.lastVersion.version}
+
         div.pure-u-1.pure-u-md-1-4.center
             a#createPdf.taskListAction.center.button(href="/hdc/pdf/create/" + templateName + "/" + bookingId
             role="button"
