--- a/server/views/taskList/tasks/proposedAddressTask.pug
+++ b/server/views/taskList/tasks/proposedAddressTask.pug
@@ -13,7 +13,7 @@ div.largeMarginBottom
             else if licenceStatus.stage !== 'ELIGIBILITY'
                 | Proposed address information sent to RO
             else
-                | Information not yet submitted
+                | Completed
 
         div.pure-u-1.pure-u-md-1-4.center
 
