Tasklist buttons update

--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -1,5 +1,12 @@
 extends ../layout
-include ./includes/startContinueViewButton
+include ./includes/conditionalFormButton
+include ./includes/startContinueChangeButton
+include ./includes/startContinueChangeMultiButton
+include ./includes/changeLink
+include ./includes/continueButton
+include ./includes/taskListButton
+include ./includes/viewButton
+include ./includes/viewEditButton
 include ./includes/utils
 
 
