--- a/server/views/taskList/tasks/caSubmitApprovalTask.pug
+++ b/server/views/taskList/tasks/caSubmitApprovalTask.pug
@@ -15,5 +15,5 @@ div.paddingBottom
 
         if allowedTransition === 'caToDm'
             div.pure-u-1.pure-u-md-1-4.center
-                a#continueBtn.taskListAction.center.button(href='/hdc/send/approval/' + prisonerInfo.bookingId)
-                    | Continue
+                -var path = '/hdc/send/approval/' + prisonerInfo.bookingId
+                +continue(path)
