--- a/server/views/pdf/tasks/firstNightTask.pug
+++ b/server/views/pdf/tasks/firstNightTask.pug
@@ -12,4 +12,4 @@ div.paddingBottom
             else
                 | Complete
         div.pure-u-1.pure-u-md-1-4.center
-            +startContinueView(buttonState, "/hdc/curfew/firstNight/" + templateName + "/" + prisoner.bookingId)
+            +startContinueChange(buttonState, "/hdc/curfew/firstNight/" + templateName + "/" + prisoner.bookingId)
