--- a/server/views/pdf/tasks/reportingTask.pug
+++ b/server/views/pdf/tasks/reportingTask.pug
@@ -12,7 +12,7 @@ div.paddingBottom
             else
                 | Complete
         div.pure-u-1.pure-u-md-1-4.center
-            +startContinueView(buttonState, "/hdc/reporting/reportingDate/" + templateName + "/" + prisoner.bookingId)
+            +startContinueChange(buttonState, "/hdc/reporting/reportingDate/" + templateName + "/" + prisoner.bookingId)
 
 
 
