--- a/server/views/taskList/tasks/caSubmitAddressReviewTask.pug
+++ b/server/views/taskList/tasks/caSubmitAddressReviewTask.pug
@@ -17,5 +17,5 @@ div.largeMarginBottom
 
             div.pure-u-1.pure-u-md-1-4.center
                 if ['STARTED', 'DONE'].includes(licenceStatus.tasks.curfewAddress) && !licenceStatus.decisions.optedOut
-                    a#continueBtn.taskListAction.center.button(href='/hdc/review/curfewAddress/' + prisonerInfo.bookingId)
-                        | Continue
+                    -var path = '/hdc/review/curfewAddress/' + prisonerInfo.bookingId
+                    +continue(path)
