--- a/server/views/taskList/tasks/caSubmitRefusalTask.pug
+++ b/server/views/taskList/tasks/caSubmitRefusalTask.pug
@@ -6,5 +6,5 @@ div.largeMarginBottom
             | Ready to submit for refusal
 
         div.pure-u-1.pure-u-md-1-4.center
-            a#continueBtn.taskListAction.center.button(href="/hdc/send/refusal/" + prisonerInfo.bookingId)
-                | Continue
+            -var path = '/hdc/send/refusal/' + prisonerInfo.bookingId
+            +continue(path)
