--- a/server/views/taskList/tasks/eligibilitySummaryTask.pug
+++ b/server/views/taskList/tasks/eligibilitySummaryTask.pug
@@ -20,10 +20,13 @@ div.paddingBottom
             else
                 | Eligible
         div.pure-u-1.pure-u-md-1-4.center
+            -var path = '/hdc/eligibility/excluded/' + prisonerInfo.bookingId
+            -var reviewPath = '/hdc/review/eligibility/' + prisonerInfo.bookingId
+
             if user.role === 'CA'
-                a.taskListAction.center.button.button-secondary(href="/hdc/eligibility/excluded/" + prisonerInfo.bookingId) View/Edit
+                +viewEdit(path)
             else
-                a.taskListAction.center.button.button-secondary(href="/hdc/review/eligibility/" + prisonerInfo.bookingId) View
+                +view(reviewPath)
 
 
 
