--- a/server/views/taskList/tasks/eligibilityTask.pug
+++ b/server/views/taskList/tasks/eligibilityTask.pug
@@ -10,10 +10,8 @@ div.largeMarginBottom
                     input(type="hidden" name="_csrf" value=csrfToken)
                     if prisonerInfo
                         input(type="hidden" name="bookingId" value=prisonerInfo.bookingId || '')
-                    if licenceStatus.tasks.eligibility === 'UNSTARTED'
-                        input#eligibilityCheckStart.taskListAction.requiredButton.button(type="submit" value="Start")
-                    else
-                        input#eligibilityCheckStart.taskListAction.requiredButton.button.button-secondary(type="submit" value="View")
+                    -var unstarted = licenceStatus.tasks.eligibility === 'UNSTARTED'
+                    +conditionalFormButton(unstarted, 'Start', 'View', 'eligibilityCheckStart')
 
     else
         div.pure-g
@@ -77,5 +75,6 @@ div.largeMarginBottom
                                         | No
 
             div.change.pure-u-1.pure-u-md-1-4.center
-                a#eligibilityCheckUpdate(href='/hdc/eligibility/excluded/'+prisonerInfo.bookingId) Change
+                -var path = '/hdc/eligibility/excluded/'+prisonerInfo.bookingId
+                +change(path, 'eligibilityCheckUpdate')
 
