--- a/server/views/taskList/tasks/finalChecksTask.pug
+++ b/server/views/taskList/tasks/finalChecksTask.pug
@@ -24,5 +24,6 @@ div.paddingBottom
                 | Not completed
         div.pure-u-1.pure-u-md-1-4.center
             if user.role === 'CA'
-                +startContinueView(licenceStatus.tasks.finalChecks, "/hdc/finalChecks/seriousOffence/" + prisonerInfo.bookingId)
+                -var path = "/hdc/finalChecks/seriousOffence/" + prisonerInfo.bookingId
+                +startContinueChange(licenceStatus.tasks.finalChecks, path)
 
