--- a/server/views/taskList/tasks/refusalTask.pug
+++ b/server/views/taskList/tasks/refusalTask.pug
@@ -6,8 +6,8 @@ div.paddingBottom
             | #{statusLabel}
         div.pure-u-1.pure-u-md-1-4.center
             if (licenceStatus.stage === 'APPROVAL')
-                a.taskListAction.center.button(href="/hdc/approval/refuseReason/" + prisonerInfo.bookingId)
-                    | Refuse HDC
+                -var path = "/hdc/approval/refuseReason/" + prisonerInfo.bookingId
+                +taskButton(path, 'Refuse HDC')
 
 
 
