--- a/server/views/taskList/tasks/reportingInstructionsTask.pug
+++ b/server/views/taskList/tasks/reportingInstructionsTask.pug
@@ -10,12 +10,16 @@ div.paddingBottom
 
         div.pure-u-1.pure-u-md-1-4.center
 
-            -var roleCanModify = user.role === 'RO' || user.role === 'CA'
+            -var path = "/hdc/reporting/reportingInstructions/" + prisonerInfo.bookingId
+            -var reviewPath = "/hdc/review/reporting/" + prisonerInfo.bookingId
 
-            if postApproval && roleCanModify
-                a.taskListAction.center.button.button-secondary(href="/hdc/reporting/reportingInstructions/" + prisonerInfo.bookingId) View/Edit
+            -var canModify = postApproval && ['RO', 'CA'].includes(user.role)
+
+            if canModify
+                +viewEdit(path)
 
             else if user.role === 'RO'
-                +startContinueView(licenceStatus.tasks.reportingInstructions, "/hdc/reporting/reportingInstructions/" + prisonerInfo.bookingId)
+                +startContinueChange(licenceStatus.tasks.reportingInstructions, path)
+
             else
-                a.taskListAction.center.button.button-secondary(href="/hdc/review/reporting/" + prisonerInfo.bookingId) View
+                +view(reviewPath)
