--- a/server/views/taskList/tasks/returnToCaTask.pug
+++ b/server/views/taskList/tasks/returnToCaTask.pug
@@ -3,4 +3,5 @@ div.taskListSingleLineItem.u-paddingBottom.sm-midPaddingBottom.pure-g
         h2.heading-medium Return to prison case admin
 
     div.pure-u-1.pure-u-md-1-4.center.buttonContainer
-        a.taskListAction.center.button.button-secondary(href="/hdc/send/return/" + prisonerInfo.bookingId) Return to prison case admin
+        -var path = "/hdc/send/return/" + prisonerInfo.bookingId
+        +taskButton(path, 'Return to prison case admin')
