--- a/server/views/taskList/tasks/riskManagementTask.pug
+++ b/server/views/taskList/tasks/riskManagementTask.pug
@@ -26,14 +26,19 @@ div.paddingBottom
                 | Not completed
 
         div.pure-u-1.pure-u-md-1-4.center
-            -var roleCanModify = user.role === 'RO' || user.role === 'CA'
-            -var editable = licenceStatus.stage === 'PROCESSING_CA' && user.role === 'CA'
 
-            if (postApproval && roleCanModify || editable)
-                a.taskListAction.center.button.button-secondary(href="/hdc/risk/riskManagement/" + prisonerInfo.bookingId) View/Edit
+            -var path = "/hdc/risk/riskManagement/" + prisonerInfo.bookingId
+            -var reviewPath = "/hdc/review/risk/" + prisonerInfo.bookingId
+
+            -var canModify = postApproval && ['RO', 'CA'].includes(user.role)
+            -var isFinalChecks = licenceStatus.stage === 'PROCESSING_CA' && user.role === 'CA'
+            -var editable = canModify || isFinalChecks
+
+            if editable
+                +viewEdit(path)
 
             else if user.role === 'RO'
-                +startContinueView(licenceStatus.tasks.riskManagement, "/hdc/risk/riskManagement/" + prisonerInfo.bookingId)
+                +startContinueChange(licenceStatus.tasks.riskManagement, path)
 
             else
-                a.taskListAction.center.button.button-secondary(href="/hdc/review/risk/" + prisonerInfo.bookingId) View
+                +view(reviewPath)
