--- a/server/views/caseList/alt/DMTable.pug
+++ b/server/views/caseList/alt/DMTable.pug
@@ -34,10 +34,12 @@ table#hdcEligiblePrisoners.largeMarginBottom
                             | #{prisoner.status}
 
                     td
+                        -var label = labels.dm[prisoner.status] || 'View'
+
                         if ['APPROVAL', 'DECIDED'].includes(prisoner.stage)
-                            if ['Awaiting decision'].includes(prisoner.status)
-                                a.button.button-primary.fullWidth.center(href="/hdc/taskList/" + prisoner.bookingId role="button")
-                                    | Start
+                            -var path ="/hdc/taskList/" + prisoner.bookingId
+                            if ['Start now'].includes(label)
+                                a.button.button-primary.fullWidth.center(href=path role="button") #{label}
                             else
-                                a.button.button-secondary.fullWidth.center(href="/hdc/taskList/" + prisoner.bookingId role="button")
-                                    | View
+                                a.button.button-secondary.fullWidth.center(href=path role="button") #{label}
+
