--- a/server/views/taskList/caTasksPostApproval.pug
+++ b/server/views/taskList/caTasksPostApproval.pug
@@ -43,4 +43,4 @@ block tasks
                 include tasks/createLicenceTask
 
     else if licenceStatus.decisions.excluded || licenceStatus.decisions.unsuitableResult
-        include tasks/notEligibleTask
+        include tasks/informOffenderTask
