--- a/server/views/taskList/tasks/informOffenderTask.pug
+++ b/server/views/taskList/tasks/informOffenderTask.pug
@@ -6,3 +6,6 @@ div.largeMarginBottom
 
         div.pure-u-1.pure-u-md-3-4
             | You should now tell the offender using the relevant form
+
+        div.pure-u-1.pure-u-md-1-4.center
+            +taskButton("/caseList/" + caseListTab, 'Back to case list')
