--- a/server/views/sent/caToRo.pug
+++ b/server/views/sent/caToRo.pug
@@ -4,4 +4,9 @@ block content
 
     include ./mixins/sentMixin
 
-    +sentContent('Curfew address submitted')
+    if submissionTarget && submissionTarget.com
+        +sentContent('Case sent', submissionTarget.com.name)
+    else
+        +sentContent('Case sent', 'No responsible officer found')
+
+
