--- a/server/views/sent/mixins/sentMixin.pug
+++ b/server/views/sent/mixins/sentMixin.pug
@@ -1,13 +1,18 @@
-mixin sentContent(title)
+mixin sentContent(title, submissionTarget)
     div.pure-g.largeMarginBottom
         div.pure-u-1.pure-u-lg-3-5
             div.confirm-banner
                 div.pure-g
                     div.pure-u-1.pure-u-md-1-8.smallMarginTop.smallPaddingTop.padLeft15
                         img(src="/public/images/large_tick.svg" alt="white tick" height="80px")
-                    div.pure-u-1.pure-u-md-7-8
+                    div.pure-u-1.pure-u-md-3-4
                         h1.heading-large=title
 
+                        if submissionTarget
+                            div The case has been sent to:
+                            div#submissionTarget.bold.paddingBottom #{submissionTarget}
+
+                    div.pure-u-1.pure-u-md-1-8
 
     div
         a#backBtn.requiredButton.button.button-secondary.largeMarginBottom(href='/' role="button") Return to case list
