--- a/server/views/taskList/tasks/proposedAddressTask.pug
+++ b/server/views/taskList/tasks/proposedAddressTask.pug
@@ -2,9 +2,7 @@ div.largeMarginBottom
     h2.heading-medium Curfew address and opt out
     div.pure-g
         div.pure-u-1.pure-u-md-3-4
-            if licenceStatus.tasks.curfewAddress === 'UNSTARTED'
-                | Not completed
-            else if licenceStatus.decisions.optedOut
+            if licenceStatus.decisions.optedOut
                 | Offender has opted out of HDC
             else if licenceStatus.decisions.bassReferralNeeded
                 | Offender has opted in and requested BASS referral
@@ -12,8 +10,10 @@ div.largeMarginBottom
                 span.alert.bold Address rejected
             else if licenceStatus.stage !== 'ELIGIBILITY'
                 | Proposed address information sent to RO
-            else
+            else if licenceStatus.tasks.curfewAddress === 'DONE'
                 | Completed
+            else
+                | Not completed
 
         div.pure-u-1.pure-u-md-1-4.center
 
