--- a/server/views/taskList/taskListTemplate.pug
+++ b/server/views/taskList/taskListTemplate.pug
@@ -13,7 +13,7 @@ include ./includes/utils
 block content
 
     div.back-link-container
-        a.link-back(href="/caseList/" + caseListTab) Back to case list
+        a.link-back(href="/caseList") Back to case list
 
         if licenceStatus.decisions.excluded
             div.error-banner.marginTopMedium
