--- a/server/views/curfew/curfewHours.pug
+++ b/server/views/curfew/curfewHours.pug
@@ -18,9 +18,51 @@ block content
                 div.pure-g.smallPaddingBottom
                     div.pure-u-1-4
                     div.pure-u-1-4
-                        span.bold From
+                        span.bold Time from
                     div.pure-u-1-2
-                        span.bold Until
+                        span.bold Time to
+                div.pure-g
+                    div.pure-u-1-4
+                        span.bold Monday to Sunday
+                    div.pure-u-1-4
+                        div.tinyPaddingBottom
+                            label(for="allFrom", class="form-label")
+                                div.pure-g.content-pull
+                                    div.pure-u-1-3
+                                        div.l-box
+                                            input(name="allFrom", id="allFrom" class="form-control", value=data.allFrom || "19:00", type="time")
+                                    div.pure-u-2-3
+
+                    div.pure-u-1-2
+                        div.tinyPaddingBottom
+                            label(for="allUntil", class="form-label")
+                                div.pure-g.content-pull
+                                    div.pure-u-1-3
+                                        div.l-box
+                                            input(name="allUntil", id="allUntil" class="form-control", value=data.allUntil || "07:00", type="time")
+                                    div.pure-u-2-3
+
+
+
+        div.largePaddingBottom
+            h2.heading-medium Do you need to enter a curfew time for each day manually?
+
+            div.form-group.inline.smallPaddingTop
+
+                div.multiple-choice(data-target="daySpecificInputs")
+                    input#yes(type="radio" checked=data.daySpecificInputs === "Yes" name="daySpecificInputs" value="Yes")
+                    label(for="yes") Yes
+                div.multiple-choice
+                    input#no(type="radio" checked=data.daySpecificInputs !== "Yes" name="daySpecificInputs" value="No")
+                    label(for="no") No
+
+            div#daySpecificInputs.pure-u-1.pure-u-md-4-5.js-hidden
+                div.pure-g.smallPaddingBottom
+                    div.pure-u-1-4
+                    div.pure-u-1-4
+                        span.bold Time from
+                    div.pure-u-1-2
+                        span.bold Time to
 
                 for day in daysInAWeek
                     div.pure-g
